RESOLVED FIXED 206072
[LFC][Integration] Fix accessibility/deleting-iframe-destroys-axcache.html and accessibility/div-within-anchors-causes-crash.html
https://bugs.webkit.org/show_bug.cgi?id=206072
Summary [LFC][Integration] Fix accessibility/deleting-iframe-destroys-axcache.html an...
Antti Koivisto
Reported 2020-01-10 09:30:05 PST
LayoutIntegration::LineLayout::lineCount sometimes returns non-zero value when it shouldn't.
Attachments
patch (1.59 KB, patch)
2020-01-10 09:34 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-01-10 09:34:12 PST
WebKit Commit Bot
Comment 2 2020-01-10 15:13:42 PST
Comment on attachment 387349 [details] patch Clearing flags on attachment: 387349 Committed r254371: <https://trac.webkit.org/changeset/254371>
WebKit Commit Bot
Comment 3 2020-01-10 15:13:43 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-10 15:14:16 PST
Note You need to log in before you can comment on or make changes to this bug.