[LFC][Integration] Fix accessibility/deleting-iframe-destroys-axcache.html and accessibility/div-within-anchors-causes-crash.html https://bugs.webkit.org/show_bug.cgi?id=206072

Reviewed by Zalan Bujtas.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::lineCount const):

We may have a line layout with 0 runs but 1 line. In these cases line count must return 0
to match other systems.


Canonical link: https://commits.webkit.org/219206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254371 268f45cc-cd09-0410-ab3c-d52691b4dbfc